samples/_failures_safe/1761654939_310123_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2af9a0f4.c: In function ‘main’:
./samples/SAFE/__tmp_2af9a0f4.c:150:24: error: missing terminating " character
  150 |                 printf("%s - %
      |                        ^~~~~~~
./samples/SAFE/__tmp_2af9a0f4.c:150:17: error: expected expression at end of input
  150 |                 printf("%s - %
      |                 ^~~~~~
./samples/SAFE/__tmp_2af9a0f4.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2af9a0f4.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2af9a0f4.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2af9a0f4.c:150:17: error: expected declaration or statement at end of input
